<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash__screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.edu.tce.tecuthsav17.activity.Splash_Screen">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/description"
        android:elevation="8dp"
        android:id="@+id/splash"
        android:layout_centerInParent="true"
        android:src="@drawable/web_hi_res_512"
         />
    <TextView
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:layout_below="@+id/splash"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:fontFamily="monospace"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/date_id"
        android:paddingTop="5dp"
        android:layout_below="@+id/title_id"
        android:layout_width="match_parent"
        android:fontFamily="monospace"
        android:text="@string/date"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/welcome_id"
        android:layout_below="@+id/date_id"
        android:layout_width="match_parent"
        android:fontFamily="monospace"
        android:paddingTop="10dp"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/welcome_id"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:fontFamily="monospace"
        android:text="@string/tce"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_height="wrap_content" />
</RelativeLayout>
