<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:elevation="4dp"
            android:background="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ws_title"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:text="@string/ws_title"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ws_person"
            android:fontFamily="monospace"
            android:text="@string/ws_person"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ws_dept"
            android:fontFamily="monospace"
            android:text="@string/ws_dept"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ws_fees"
            android:fontFamily="monospace"
            android:text="@string/ws_fees"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/ws_desc"
            android:fontFamily="monospace"
            android:text="@string/ws_desc"
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v7.widget.CardView>