<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="5dp"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@android:color/holo_orange_light"
            android:padding="5dp"
            android:elevation="4dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/contact_dept"
            android:text="@string/dept_name"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:fontFamily="monospace"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/contact_name"
            android:text="@string/contact_name"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:fontFamily="monospace"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/contact_phn"
            android:text="@string/contact_phn"
            android:autoLink="phone"
            android:textStyle="italic"
            android:fontFamily="monospace"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="13sp"
            android:textColor="#303F9F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/contact_email"
            android:text="@string/contact_email"
            android:autoLink="email"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:maxLength="30"
            android:textStyle="italic"
            android:textColor="#303F9F"
            android:fontFamily="monospace"
            android:textSize="13sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v7.widget.CardView>