<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:elevation="4dp"
            android:background="@android:color/holo_orange_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/coord_titile"
            android:fontFamily="monospace"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/coordinator"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/coord_name"
            android:fontFamily="monospace"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/coord_name"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/coord_phn"
            android:textSize="16sp"
            android:autoLink="phone"
            android:text="@string/coord_phn"
            android:fontFamily="monospace"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>